@@ -10,6 +10,12 @@ Date - user - Tool (Simulator | GUI | prv2dim | trf2dim | Other)
 
 	CHANGES:  	explanation of codification changes
 
+2015/01/20 - jgonzale - prv2dim
+	BUGFIX:		Solved bug in the translation 'InBlockComparison' that
+				caused different translated traces due to a random comparison
+				results. Now, when most fields of two Paraver Records are the
+				same, the comparison takes into account the trace order.
+
 2015/01/15 - jgonzale - GUI
 	BUGFIX:		Solved a bug that created multiple mapping warning
 				messages when doing a bulk modificacion of 'Target Machine'
